--- a/packages/webauthn-demo-client/package.json
+++ b/packages/webauthn-demo-client/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
