--- a/packages/webauthn-demo-server/package.json
+++ b/packages/webauthn-demo-server/package.json
@@ -11,11 +11,16 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
+    "@simplewebauthn/server": "^7.2.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "rimraf": "^4.4.1",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "ts-node": "^10.9.1"
